--- a/site_plan.html
+++ b/site_plan.html
@@ -10,9 +10,8 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Plate Pal  Site Plan</h1>
+      <h2>Myriam Florencia Guirado Urrea</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -21,17 +20,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>Cooking was something really important in my family and as I grow up I started to cook for myself. The more and more that I cooked I started to save recipes from my family, friends, the internet, and cookbooks. The more and more I collect recipes the more unorganized became they were all over the place, so one day as I was reorganizing my recipes I thought to myself: "It would be great if there was a way that I can organize my recipes in a better way"? with that in mind, I came up with the idea I create a recipe organizer that would be simple and easy to alter if needed. This would be great for people that love cooking and want to be organized.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
-
+      <p>Plate Pal's audiance are those who would like to take an interese on cooking or beaking. Keeping track of the many recipes that you cooked can be stressful and this tools will make it easier for those who like a more organized cookbook.</p>
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      
+      <img src="images/plate-pal-logo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -45,13 +44,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/fe6152-28353b-e6e6e6-fbff12" target="_blank">https://coolors.co/fe6152-28353b-e6e6e6-fbff12</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#FE6152]</td><td class="secondary">[#FBFF12]</td><td class="accent1">[#28353B]</td><td class="accent2">[#E6E6E6]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -62,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Montserrat  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Courier Prime  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
