--- a/site_plan.html
+++ b/site_plan.html
@@ -127,8 +127,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/kitchen_counter.jpg" alt="kitchen">
+        <img src="images/Q&A.jpg" alt="Q&A">
 
       </ul>
       <h3>Recipe book and Editor</h3>
@@ -136,8 +136,8 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/recipe.jpg" alt="recipe">
+        <img src="images/editor.jpg" alt="editor">
 
       </ul>
       <h3>Planning and Calender</h3>
@@ -145,8 +145,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/planning.jpg" alt="planning">
+        <img src="images/calender.jpg" alt="calender">
 
       </ul>
       <hr>
