--- a/site_plan.html
+++ b/site_plan.html
@@ -124,7 +124,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The reason why people will come to my website will be the convenient and the simple way to organize recipes. With my experience I have many recipes that I have in many different places, in paper in my drawers, on my notes on my phone, and bookmarked on my search engine. There are a lot of places and I lose them all the time. This will fix that by having them all in one place. The home page will be an introduction to the user to what they can expect from my website. It will have a visual to and a brief bullet point on the website, and at the end it will have a few Q&A and reviews from current users for the new users.
       </p>
       <p>Images for the Home page</p>
         <img src="images/kitchen_counter.jpg" alt="kitchen">
@@ -133,7 +133,7 @@
       </ul>
       <h3>Recipe book and Editor</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This subpage is where the user will be able to add their recipes to their recipe book. On this page, the user will have the option to manually add the recipe, or if they want, they can directly link the recipe from another website to their recipe book. If the user wants to add the recipe manual there will be a lot of editor options like the title, ingredients section, and directions.  With the other option, if they don’t want to type it, they can link it to another website. The ideal would be to have it filled out by the link but at least I want it to link to the page of the recipe.
       </p>
       <p>Images for the Page 2</p>
         <img src="images/recipe.jpg" alt="recipe">
@@ -142,7 +142,7 @@
       </ul>
       <h3>Planning and Calender</h3>
       <p>
-        [Written copy for the Page 3 here]
+        For my second subpage, this will be where you can plan what recipes you would like to cook for the day, week, or month. For those who like to plan, this will be a very efficient way to plan it out. First you pick the recipes that you would like to cook, the next step will be to organize it on the calendar for either the day, week, or month.
       </p>
       <p>Images for the Page 3</p>
         <img src="images/planning.jpg" alt="planning">
