--- a/site_plan.html
+++ b/site_plan.html
@@ -131,7 +131,7 @@
         <img src="images/Q&A.jpg" alt="Q&A">
 
       </ul>
-      <h3>Recipe book and Editor</h3>
+      <h3>Recipe book</h3>
       <p>
         This subpage is where the user will be able to add their recipes to their recipe book. On this page, the user will have the option to manually add the recipe, or if they want, they can directly link the recipe from another website to their recipe book. If the user wants to add the recipe manual there will be a lot of editor options like the title, ingredients section, and directions.  With the other option, if they don’t want to type it, they can link it to another website. The ideal would be to have it filled out by the link but at least I want it to link to the page of the recipe.
       </p>
@@ -140,7 +140,7 @@
         <img src="images/editor.jpg" alt="editor">
 
       </ul>
-      <h3>Planning and Calender</h3>
+      <h3>Meal Prep</h3>
       <p>
         For my second subpage, this will be where you can plan what recipes you would like to cook for the day, week, or month. For those who like to plan, this will be a very efficient way to plan it out. First you pick the recipes that you would like to cook, the next step will be to organize it on the calendar for either the day, week, or month.
       </p>
@@ -160,15 +160,15 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage-wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Recipe Book</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Meal Prep</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
