--- a/site_plan.html
+++ b/site_plan.html
@@ -158,7 +158,7 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        I made this page not to big I didn't want to overwhelm the user at the beginning to I made it so that it give a brief explanation of what the website does and I section of frequwntly asked questions about the website.
       </p>
       <img src="images/homepage-wireframe.png" alt="home page wireframe">
 
