--- a/site_plan.html
+++ b/site_plan.html
@@ -164,9 +164,9 @@
 
       <h3>Recipe Book</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        For this page at first it will show the many recipe book that the user has when they click one a small page will drop and it will have the many recipes that that book has when they click on a recipe another small page will drop down and it will have the recipe they they clicked on.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/recipebook-wireframe.png" alt="Recipe Book wireframe">
 
       <h3>Meal Prep</h3>
       <p>         
