--- a/site_plan.html
+++ b/site_plan.html
@@ -170,9 +170,9 @@
 
       <h3>Meal Prep</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        FOr this page I will have a calender, and that is where the user will be able to organizer their meal prep goign day by day. This will helped them see what they need to get when they are cooking and also if they need a grocery list. 
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/mealprep_wireframe.png" alt="Meal Prep wireframe">
     </main>
   </body>
 
