--- a/site_plan.html
+++ b/site_plan.html
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          Recipes and Editor <!-- change this -->
+          Recipes Book <!-- change this -->
         </div>
         <div class="sm-page3">
-          Planning and Calender  <!-- change this -->
+          Meal Prep <!-- change this -->
         </div>
 
         <div class="top">
