--- a/site_plan.html
+++ b/site_plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Recipes and Editor</a>
-        <a href="#">Planning and Calender</a>
+        <a href="#">Recipe Book</a>
+        <a href="#">Meal Prep</a>
       </nav>
       <hr>
       <h2>
@@ -99,7 +99,7 @@
           Home
         </div>
         <div class="sm-page2">
-          Recipes Book <!-- change this -->
+          Recipe Book <!-- change this -->
         </div>
         <div class="sm-page3">
           Meal Prep <!-- change this -->
